Add click event support.